--- a/libsimple2d/simple/2d/libsimple2d.vcxproj
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj
@@ -110,27 +110,40 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\win32-specific\gles\prebuilt\*.*" "$(Ou
   <ItemGroup>
     <ClCompile Include="..\base\AutoreleasePool.cpp" />
     <ClCompile Include="..\base\Ref.cpp" />
+    <ClCompile Include="..\platform\android\Application-android.cpp" />
     <ClCompile Include="..\platform\desktop\GLViewImpl-desktop.cpp" />
     <ClCompile Include="..\platform\GLView.cpp" />
+    <ClCompile Include="..\platform\ios\Application-ios.cpp" />
+    <ClCompile Include="..\platform\linux\Application-linux.cpp" />
+    <ClCompile Include="..\platform\mac\Application-mac.cpp" />
+    <ClCompile Include="..\platform\win32\Application-win32.cpp" />
     <ClCompile Include="..\simple2d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\base\AutoreleasePool.h" />
     <ClInclude Include="..\base\Ref.h" />
+    <ClInclude Include="..\platform\android\Application-android.h" />
     <ClInclude Include="..\platform\android\GL-android.h" />
     <ClInclude Include="..\platform\android\PlatformDefine-android.h" />
+    <ClInclude Include="..\platform\Application.h" />
+    <ClInclude Include="..\platform\ApplicationProtocol.h" />
+    <ClInclude Include="..\platform\Common.h" />
     <ClInclude Include="..\platform\desktop\GLViewImpl-desktop.h" />
     <ClInclude Include="..\platform\GL.h" />
     <ClInclude Include="..\platform\GLView.h" />
+    <ClInclude Include="..\platform\ios\Application-ios.h" />
     <ClInclude Include="..\platform\ios\GL-ios.h" />
     <ClInclude Include="..\platform\ios\PlatformDefine-ios.h" />
+    <ClInclude Include="..\platform\linux\Application-linux.h" />
     <ClInclude Include="..\platform\linux\GL-linux.h" />
     <ClInclude Include="..\platform\linux\PlatformDefine-linux.h" />
+    <ClInclude Include="..\platform\mac\Application-mac.h" />
     <ClInclude Include="..\platform\mac\GL-mac.h" />
     <ClInclude Include="..\platform\mac\PlatformDefine-mac.h" />
     <ClInclude Include="..\platform\PlatformConfig.h" />
     <ClInclude Include="..\platform\PlatformDefine.h" />
     <ClInclude Include="..\platform\PlatformMacros.h" />
+    <ClInclude Include="..\platform\win32\Application-win32.h" />
     <ClInclude Include="..\platform\win32\GL-win32.h" />
     <ClInclude Include="..\platform\win32\PlatformDefine-win32.h" />
     <ClInclude Include="..\simple2d.h" />
