--- a/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="platform\desktop">
       <UniqueIdentifier>{f258feac-6aaf-4799-ae8d-e5cd21b72c57}</UniqueIdentifier>
     </Filter>
+    <Filter Include="base\event">
+      <UniqueIdentifier>{396af7f3-a228-412b-9fda-942c3e3542c8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\simple2d.cpp" />
@@ -75,6 +78,33 @@
     </ClCompile>
     <ClCompile Include="..\platform\android\Application-android.cpp">
       <Filter>platform\android</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Geometry.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Vec2.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Vec3.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Vec4.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\base\Director.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="..\base\MatrixControl.cpp">
+      <Filter>base</Filter>
+    </ClCompile>
+    <ClCompile Include="..\math\Mat4.cpp">
+      <Filter>math</Filter>
+    </ClCompile>
+    <ClCompile Include="..\base\event\Event.cpp">
+      <Filter>base\event</Filter>
+    </ClCompile>
+    <ClCompile Include="..\base\event\EventTouch.cpp">
+      <Filter>base\event</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -157,8 +187,53 @@
     <ClInclude Include="..\platform\Common.h">
       <Filter>platform</Filter>
     </ClInclude>
+    <ClInclude Include="..\math\Geometry.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Vec2.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\MathBase.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Math.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Vec3.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Vec4.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\Director.h">
+      <Filter>base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\MatrixControl.h">
+      <Filter>base</Filter>
+    </ClInclude>
+    <ClInclude Include="..\math\Mat4.h">
+      <Filter>math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\event\Event.h">
+      <Filter>base\event</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\event\EventTouch.h">
+      <Filter>base\event</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="simple2d.def" />
+    <None Include="..\math\Vec2.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\Vec3.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\Vec4.inl">
+      <Filter>math</Filter>
+    </None>
+    <None Include="..\math\Mat4.inl">
+      <Filter>math</Filter>
+    </None>
   </ItemGroup>
 </Project>
