--- a/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
@@ -67,9 +67,6 @@
     <ClCompile Include="..\platform\win32\Application-win32.cpp">
       <Filter>platform\win32</Filter>
     </ClCompile>
-    <ClCompile Include="..\platform\mac\Application-mac.cpp">
-      <Filter>platform\mac</Filter>
-    </ClCompile>
     <ClCompile Include="..\platform\linux\Application-linux.cpp">
       <Filter>platform\linux</Filter>
     </ClCompile>
@@ -105,6 +102,9 @@
     </ClCompile>
     <ClCompile Include="..\base\event\EventTouch.cpp">
       <Filter>base\event</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platform\mac\Application-mac.mm">
+      <Filter>platform\mac</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
