--- a/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj.filters
@@ -91,9 +91,6 @@
     <ClCompile Include="..\base\Director.cpp">
       <Filter>base</Filter>
     </ClCompile>
-    <ClCompile Include="..\base\MatrixControl.cpp">
-      <Filter>base</Filter>
-    </ClCompile>
     <ClCompile Include="..\math\Mat4.cpp">
       <Filter>math</Filter>
     </ClCompile>
@@ -105,6 +102,18 @@
     </ClCompile>
     <ClCompile Include="..\platform\mac\Application-mac.mm">
       <Filter>platform\mac</Filter>
+    </ClCompile>
+    <ClCompile Include="..\renderer\Renderer.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\renderer\Texture2D.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\renderer\GLStateCache.cpp">
+      <Filter>renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="..\base\Matrix.cpp">
+      <Filter>base</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -208,9 +217,6 @@
     <ClInclude Include="..\base\Director.h">
       <Filter>base</Filter>
     </ClInclude>
-    <ClInclude Include="..\base\MatrixControl.h">
-      <Filter>base</Filter>
-    </ClInclude>
     <ClInclude Include="..\math\Mat4.h">
       <Filter>math</Filter>
     </ClInclude>
@@ -219,6 +225,18 @@
     </ClInclude>
     <ClInclude Include="..\base\event\EventTouch.h">
       <Filter>base\event</Filter>
+    </ClInclude>
+    <ClInclude Include="..\renderer\Renderer.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\renderer\Texture2D.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\renderer\GLStateCache.h">
+      <Filter>renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\Matrix.h">
+      <Filter>base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
