--- a/libsimple2d/simple/2d/libsimple2d.vcxproj
+++ b/libsimple2d/simple/2d/libsimple2d.vcxproj
@@ -126,8 +126,11 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\win32-specific\gles\prebuilt\*.*" "$(Ou
     <ClCompile Include="..\platform\linux\Application-linux.cpp" />
     <ClCompile Include="..\platform\mac\Application-mac.mm" />
     <ClCompile Include="..\platform\win32\Application-win32.cpp" />
+    <ClCompile Include="..\renderer\GLProgram.cpp" />
+    <ClCompile Include="..\renderer\GLProgramCache.cpp" />
     <ClCompile Include="..\renderer\GLStateCache.cpp" />
     <ClCompile Include="..\renderer\Renderer.cpp" />
+    <ClCompile Include="..\renderer\Shaders.cpp" />
     <ClCompile Include="..\renderer\Texture2D.cpp" />
     <ClCompile Include="..\simple2d.cpp" />
   </ItemGroup>
@@ -136,6 +139,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\win32-specific\gles\prebuilt\*.*" "$(Ou
     <ClInclude Include="..\base\Director.h" />
     <ClInclude Include="..\base\event\Event.h" />
     <ClInclude Include="..\base\event\EventTouch.h" />
+    <ClInclude Include="..\base\Macros.h" />
     <ClInclude Include="..\base\Matrix.h" />
     <ClInclude Include="..\base\Ref.h" />
     <ClInclude Include="..\math\Geometry.h" />
@@ -169,8 +173,11 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\win32-specific\gles\prebuilt\*.*" "$(Ou
     <ClInclude Include="..\platform\win32\Application-win32.h" />
     <ClInclude Include="..\platform\win32\GL-win32.h" />
     <ClInclude Include="..\platform\win32\PlatformDefine-win32.h" />
+    <ClInclude Include="..\renderer\GLProgram.h" />
+    <ClInclude Include="..\renderer\GLProgramCache.h" />
     <ClInclude Include="..\renderer\GLStateCache.h" />
     <ClInclude Include="..\renderer\Renderer.h" />
+    <ClInclude Include="..\renderer\Shaders.h" />
     <ClInclude Include="..\renderer\Texture2D.h" />
     <ClInclude Include="..\simple2d.h" />
   </ItemGroup>
