--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ libsimple2d/libsimple2d.v11.suo
 libsimple2d/simple/2d/Debug.win32
 libsimple2d/simple/2d/Release.win32
 .DS_Store
+libsimple2d/build/simple2d_libs.xcodeproj/project.xcworkspace
+libsimple2d/build/simple2d_libs.xcodeproj/xcuserdata
